force-app/main/default/objects/sm_Purchase_Order_Line__c/sm_Purchase_Order_Line__c.object-meta.xml
<CustomObject>
    <label>Purchase Order Line</label>
    <nameField>
        <displayFormat>LINE-{000}</displayFormat>
        <label>PO Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>