force-app/main/default/objects/sm_Purchase_Order_Line__c/fields/Expected_Cost__c.field-meta.xml
<CustomField>
    <fullName>Expected_Cost__c</fullName>
    <formula>Quantity_to_Order__c *  Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>