force-app/main/default/objects/sm_Purchase_Order_Line__c/fields/Quantity_to_Order__c.field-meta.xml
<CustomField>
    <fullName>Quantity_to_Order__c</fullName>
    <label>Quantity to Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>