force-app/main/default/objects/sm_Purchase_Order_Line__c/fields/sm_Extended_Cost__c.field-meta.xml
<CustomField>
    <fullName>sm_Extended_Cost__c</fullName>
    <formula>Cost__c  *  Quantity_to_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>