force-app/main/default/objects/sm_Purchase_Order_Line__c/fields/sm_Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>sm_Inventory_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inventory Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>sm_Inventory_Item__c.sm_Is_Inventoriable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>sm_Inventory_Item__c</referenceTo>
    <relationshipName>Purchase_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>