force-app/main/default/objects/sm_Purchase_Order_Line__c/fields/sm_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>sm_Purchase_Order__c</fullName>
    <label>Purchase Order</label>
    <referenceTo>sm_Purchase_Order__c</referenceTo>
    <relationshipLabel>Purchase Order Lines</relationshipLabel>
    <relationshipName>Purchase_Order_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>